bk_ida/gccida/g3/def_cfa_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/def_cfa_1/src/dwarf2out.c:1179:12: error: expected expression
*( _OWORD *)&v8->dw_cfi_oprnd1.dw_cfi_reg_num = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/def_cfa_1/src/dwarf2out.c:1179:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8->dw_cfi_oprnd1.dw_cfi_reg_num = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/def_cfa_1/src/obj/dwarf2out.o] Error 1
